Closed
Bug 1147533
Opened 10 years ago
Closed 10 years ago
Add new tracing api paths for cross-compartment edges
Categories
(Core :: JavaScript: GC, defect)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
mozilla40
| Tracking | Status | |
|---|---|---|
| firefox40 | --- | fixed |
People
(Reporter: terrence, Assigned: terrence)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
|
12.08 KB,
patch
|
jonco
:
review+
|
Details | Diff | Splinter Review |
Basically a name and slight format change to fit the new style.
Attachment #8583249 -
Flags: review?(jcoppeard)
Comment 1•10 years ago
|
||
Comment on attachment 8583249 [details] [diff] [review]
4.2_move_xcomp_tracing-v0.diff
Review of attachment 8583249 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/src/gc/Marking.h
@@ +39,5 @@
>
> /*** Tracing ***/
>
> +// Trace through an edge in the live object graph on behalf of tracing. The
> +// effect of tracing the edge depends on teh JSTracer being used.
Typo: teh
Attachment #8583249 -
Flags: review?(jcoppeard) → review+
| Assignee | ||
Comment 2•10 years ago
|
||
Comment 3•10 years ago
|
||
Backed out in https://hg.mozilla.org/integration/mozilla-inbound/rev/99415fbccf83 because something in this push caused frequent 10.10 debug devtools-2 assertion failures like https://treeherder.mozilla.org/logviewer.html#?job_id=8197104&repo=mozilla-inbound
| Assignee | ||
Comment 4•10 years ago
|
||
The problem before was in the last patch in the series (bug 1147670):
https://treeherder.mozilla.org/#/jobs?repo=try&revision=514b9ba692a9
https://hg.mozilla.org/integration/mozilla-inbound/rev/13b0e3747284
Comment 5•10 years ago
|
||
Assignee: nobody → terrence
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in
before you can comment on or make changes to this bug.
Description
•