Bug 1147533 - Add cross-compartment tracing methods via the new tracing paths; r=jonco